<resources>
    <string name="app_name">Hangman</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="un_jugador">Un jugador</string>
    <string name="dos_jugadores">Dos jugadores</string>
    <string name="listo">Listo!</string>
    <string name="jugador_1_escriba_la_frase_a_adivinar_por_jugador_2">Jugador 1, escriba la frase a adivinar por Jugador 2</string>
    <string name="jugador_2_escriba_la_frase_a_adivinar_por_jugador_1">Jugador 2, escriba la frase a adivinar por Jugador 1</string>
    <string name="ganaste_jugador1">Ganaste! Jugador 1</string>
    <string name="felicitaciones_dialog">Felicitaciones, toca para reiniciar y jugar nuevamente</string>
    <string name="ganaste_jugador2">Ganaste Jugador 2!</string>
    <string name="perdiste_jugador1">Perdiste Jugador 1! Felicidades Jugador 2!</string>
    <string name="sin_vidas_dialog">Te has quedado sin vidas, toca para reiniciar</string>
    <string name="perdiste_jugador2">Perdiste Jugador 2! Felicidades Jugador 1!</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="jugador_1">Jugador 1</string>
    <string name="jugador_2">Jugador 2</string>
    <string name="jugador_1_escribe_tu_nombre">Jugador 1, escribe tu nombre</string>
    <string name="jugador_2_escribe_tu_nombre">Jugador 2, escribe tu nombre</string>
    <string name="la_frase_no_puede_estar_vacia">La frase no puede estar vacia</string>
    <string name="caracter_invalido_error">Carácter inválido. Solo se permiten letras y espacios.</string>
    <string name="perdiste_title">Perdiste!</string>
    <string name="todo">TODO</string>
    <string name="boton_dos_jugadores">Boton dos jugadores</string>
    <string name="boton_un_jugador">Boton un jugador</string>
    <string name="frase_aleatoria">Frase aleatoria</string>
    <string name="primera_vida_perdida">Primera vida perdida</string>
    <string name="segunda_vida_perdida">Segunda vida perdida</string>
    <string name="tercera_vida_perdida">Tercera vida perdida</string>
    <string name="quinta_vida_perdida">Quinta vida perdida</string>
    <string name="sexta_vida_perdida">Sexta vida perdida</string>
    <string name="septima_vida_perdida">Septima vida perdida</string>
    <string name="primera_vida_perdida_jugador_1">Primera vida perdida jugador 1</string>
    <string name="segunda_vida_perdida_jugador_1">Segunda vida perdida jugador 1</string>
    <string name="tercera_vida_perdida_jugador_1">Tercera vida perdida jugador 1</string>
    <string name="cuarta_vida_perdida_jugador_1">Cuarta vida perdida jugador 1</string>
    <string name="quinta_vida_perdida_jugador_1">Quinta vida perdida jugador 1</string>
    <string name="sexta_vida_perdida_jugador_1">Sexta vida perdida jugador 1</string>
    <string name="septima_vida_perdida_jugador_1">Septima vida perdida jugador 1</string>
    <string name="primera_vida_perdida_jugador_2">Primera vida perdida jugador 2</string>
    <string name="segunda_vida_perdida_jugador_2">Segunda vida perdida jugador 2</string>
    <string name="tercera_vida_perdida_jugador_2">Tercera vida perdida jugador 2</string>
    <string name="cuarta_vida_perdida_jugador_2">Cuarta vida perdida jugador 2</string>
    <string name="quinta_vida_perdida_jugador_2">Quinta vida perdida jugador 2</string>
    <string name="sexta_vida_perdida_jugador_2">Sexta vida perdida jugador 2</string>
    <string name="cuarta_vida_perdida">Cuarta vida perdida</string>
    <string name="turno_jugador_2">Turno Jugador 2</string>
    <string name="turno_jugador_1">Turno Jugador 1</string>
    <string name="letra_incorrecta">LETRA INCORRECTA</string>
    <string name="one_turn_per_player">OneTurnPerPlayer</string>
    <string name="keep_while_winning_player">KeepWhileWinningPlayer</string>
    <string name="debes_elegir_un_metodo_de_juego">Debes elegir un metodo de juego</string>
    <string name="sigue_mientras_aciertes">Sigue mientras aciertes</string>
    <string name="un_turno_por_jugador">Un turno por jugador</string>
</resources>