<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/ivTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"
        android:src="@drawable/hangman_title_without_background"
        android:layout_height="110dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/gamePlayer1"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivStep1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/hangman_step1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivStep2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/primera_vida_perdida"
                android:src="@drawable/hangman_step2"/>

            <ImageView
                android:id="@+id/ivStep3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/segunda_vida_perdida"
                android:src="@drawable/hangman_step3"/>

            <ImageView
                android:id="@+id/ivStep4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/tercera_vida_perdida"
                android:src="@drawable/hangman_step4"/>

            <ImageView
                android:id="@+id/ivStep5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/cuarta_vida_perdida"
                android:src="@drawable/hangman_step5"/>

            <ImageView
                android:id="@+id/ivStep6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/quinta_vida_perdida"
                android:src="@drawable/hangman_step6"/>

            <ImageView
                android:id="@+id/ivStep7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="invisible"
                android:contentDescription="@string/sexta_vida_perdida"
                android:src="@drawable/hangman_step7"/>

            <ImageView
                android:id="@+id/ivFakeBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                android:src="@drawable/hangman_fake_background"/>


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/rvWord"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="250dp"
            tools:listitem="@layout/item_letter_spot"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="9"
            android:id="@+id/rvAlphabet"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_letter_spot"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>