<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/ivTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"
        android:src="@drawable/hangman_title_without_background"
        android:layout_height="110dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/ivCompleteBody"
        android:src="@drawable/hangman_complete_body"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivOnePlayer"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/menu_sign_new"
            android:scaleType="fitXY"
            android:contentDescription="@string/boton_un_jugador"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/twilight_new_moon"
            android:maxWidth="130dp"
            android:maxLines="1"
            android:text="@string/un_jugador"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/ivOnePlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivTwoPlayer"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/menu_sign_new"
            android:scaleType="fitXY"
            android:contentDescription="@string/boton_dos_jugadores"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/twilight_new_moon"
            android:maxWidth="130dp"
            android:maxLines="1"
            android:text="@string/dos_jugadores"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/fragmentContainer"
        android:visibility="gone"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>