<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/dlTwoPlayersSet"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/hangman_title_without_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <ImageView
        android:layout_width="30dp"
        app:layout_constraintStart_toEndOf="@id/tvInputPhrasePlayer1"
        app:layout_constraintTop_toTopOf="@id/tvInputPhrasePlayer1"
        app:layout_constraintBottom_toBottomOf="@id/tvInputPhrasePlayer1"
        android:layout_marginEnd="4dp"
        android:id="@+id/btnRollDice"
        android:contentDescription="@string/frase_aleatoria"
        android:src="@drawable/hangman_dice_logo"
        android:layout_height="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clOneTurnPerPlayer"
        android:id="@+id/tvInputPhrasePlayer1"
        android:imeOptions="actionDone"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/transparent"
        app:counterMaxLength="20"
        app:counterTextColor="@color/black"
        app:counterEnabled="true"
        android:hint="@string/jugador_1_escriba_la_frase_a_adivinar_por_jugador_2"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEditPhrasePlayer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/twilight_new_moon"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputPhrasePlayer1"
        android:id="@+id/tvInputPlayerName"
        android:hint="@string/jugador_1_escribe_tu_nombre"
        app:hintTextColor="@color/black"
        android:imeOptions="actionDone"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/transparent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEditPlayerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/twilight_new_moon"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputPlayerName"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/btnSetPhrase"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:strokeColor="@color/black"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/twilight_new_moon"
            android:text="@string/listo"
            android:layout_height="wrap_content"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        app:layout_constraintEnd_toStartOf="@id/clOneTurnPerPlayer"
        app:layout_constraintStart_toStartOf="@id/tvInputPhrasePlayer1"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        android:id="@+id/clKeepWhileWinningPlayer"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"
            android:src="@drawable/menu_sign_new"
            android:layout_height="match_parent"/>

        <CheckBox
            android:id="@+id/cbKeepWhileWinningPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/twilight_new_moon"
            android:text="@string/sigue_mientras_aciertes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        app:layout_constraintEnd_toEndOf="@id/tvInputPhrasePlayer1"
        app:layout_constraintStart_toEndOf="@id/clKeepWhileWinningPlayer"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        android:id="@+id/clOneTurnPerPlayer"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"
            android:src="@drawable/menu_sign_new"
            android:layout_height="match_parent"/>

        <CheckBox
            android:id="@+id/cbOneTurnPerPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/twilight_new_moon"
            android:text="@string/un_turno_por_jugador"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>